Fixed Honour Among Thieves title text wrapping.

--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ hr.dark-100 {
     top: 5%;
   }
   .carousel-text h1 {
-    font-size: 150%;
+    font-size: 125%;
     margin-bottom: 1%;
   }
   .carousel-text h3 {
